--- a/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/Fundamentos/bloco-03/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,36 +1,15 @@
-.super-mario {
-    position: absolute;
-    width: 200px;
-    z-index: 1;
-  }
-  
-  .goomba {
-    position: absolute;
-    width: 100px;
-    top: 340px;
-    left: 120px;
-    z-index: 2;
-  }
-  
-  .baloon {
-      top: 100px;
-      left: 300px;
-      position: absolute;
-      z-index: 4;  
-  }
-  
-  .speach {
-    top: 140px;
-    left: 320px;
-    position: absolute;
-    font-size: 25px;
-    z-index: 5;
-  }
-  
-  .bowser {
-    top: 220px;
-    left: 580px;
-    position: absolute;  
-    width: 200px;
-    z-index: 3;
-  }
+h1, p {
+  text-align: center;
+}
+
+li:hover {
+  background-color: rgb(0, 195, 255);
+}
+
+li:active {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+li {
+  list-style: none;
+}
